# fpf-wagtail-common

./: .gitignore  .pre-commit-config.yaml  README.md  babel.config.js  package-lock.json  package.json  pyproject.toml  webpack.config.js
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: check.yml  publish.yml
fpfwagtailcommon/curlify/: wagtail_hooks.py
fpfwagtailcommon/curlify/client/: curlify.js  curlify.test.js  draftail_curlify.js
fpfwagtailcommon/curlify/static/curlify/js/: draftail_curlify.js
